Add Werner data to taxonomy

--- a/notebooks/audit_data.ipynb
+++ b/notebooks/audit_data.ipynb
@@ -12,6 +12,7 @@
     "from datetime import datetime\n",
     "import pandas as pd\n",
     "import lib.db as db\n",
+    "import lib.google as google\n",
     "import lib.util as util"
    ]
   },
@@ -21,7 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CXN = db.connect_up()"
+    "CXN = db.connect_up()\n",
+    "\n",
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'\n",
+    "EXTERNAL_DATA = Path('..') / 'data' / 'external'"
    ]
   },
   {
@@ -378,6 +382,523 @@
     "\n",
     "find_missing_image_records()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verify scientific names in Werner data\n",
+    "\n",
+    "Look for scientific names in the Werner Excel sheet that are not in the\n",
+    "master taxonomy. Use Master Taxonomy synonyms to adjust scientific names\n",
+    "in the Werner data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_scientific_names():\n",
+    "    sql = \"\"\"SELECT scientific_name, synonyms, family FROM taxonomy\"\"\"\n",
+    "    taxonomy = pd.read_sql(sql, CXN)\n",
+    "\n",
+    "    synonyms = taxonomy.synonyms.str.split(r'\\s*[;,]\\s*', expand=True)\n",
+    "\n",
+    "    taxonomy = pd.concat([taxonomy, synonyms], axis=1)\n",
+    "    synonyms = taxonomy.melt(\n",
+    "        id_vars=['scientific_name'],\n",
+    "        value_vars=synonyms.columns,\n",
+    "        value_name='synonym')\n",
+    "\n",
+    "    synonyms = synonyms[synonyms.synonym.notna()].drop('variable', axis=1)\n",
+    "    synonyms = synonyms.set_index('synonym').scientific_name.to_dict()\n",
+    "\n",
+    "    sci_names = taxonomy.scientific_name.tolist()\n",
+    "\n",
+    "    return sci_names, synonyms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_werner_data():\n",
+    "    excel_path = EXTERNAL_DATA / 'NitFixWernerEtAl2014.xlsx'\n",
+    "    werner = pd.read_excel(excel_path)\n",
+    "    drops = \"\"\"NFC Legume Likelihood_non-precursor\n",
+    "        Likelihood_precursor Likelihood_fixer Likelihood_stable_fixer\n",
+    "        Most_likely_state Corrected_lik_precursor\n",
+    "        Corrected_lik_stable_fixer\"\"\".split()\n",
+    "    werner = werner.drop(\n",
+    "        drops, axis=1).rename(columns={\n",
+    "            'Species': 'scientific_name',\n",
+    "            'Family': 'family',\n",
+    "            'Order': 'order'\n",
+    "        })\n",
+    "    return werner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3467, 6)\n",
+      "(1709, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sci_names, synonyms = get_scientific_names()\n",
+    "werner = read_werner_data()\n",
+    "\n",
+    "print(werner.shape)\n",
+    "in_orders = werner.order.isin(\n",
+    "    ['Cucurbitales', 'Fagales', 'Fabales', 'Rosales'])\n",
+    "werner = werner[in_orders]\n",
+    "print(werner.shape)\n",
+    "is_sci_name = werner.scientific_name.isin(sci_names)\n",
+    "is_synonym = werner.scientific_name.isin(synonyms)\n",
+    "update_it = ~is_sci_name & is_synonym"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1675\n",
+      "(34, 6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order</th>\n",
+       "      <th>family</th>\n",
+       "      <th>Data_fixing</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Source2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scientific_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Acomastylis rossii</th>\n",
+       "      <td>Rosales</td>\n",
+       "      <td>Rosaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TRY</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Amphithalea parvifolia</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aspalathus subtingens</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Betula davurica</th>\n",
+       "      <td>Fagales</td>\n",
+       "      <td>Betulaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TRY</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cercis gigantea</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cercocarpus betuloides</th>\n",
+       "      <td>Rosales</td>\n",
+       "      <td>Rosaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>Becking_1975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullen cinereum</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullen leucanthum</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullen parvum</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullen patens</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullen pustulatum</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullen tenax</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cyathostegia mathewsii</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cyclopia longifolia</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dalbergiella nyasae</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lachemilla orbiculata</th>\n",
+       "      <td>Rosales</td>\n",
+       "      <td>Rosaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TRY</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lespedeza cuneata</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lespedeza nipponica</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libidibia ferrea</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medicago ciliaris</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medicago italica</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medicago shepardii</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ononis arvensis</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oxytropis borealis</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parasponia parviflora</th>\n",
+       "      <td>Rosales</td>\n",
+       "      <td>Cannabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parkinsonia florida</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Podolobium alpestre</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quercus margarettiae</th>\n",
+       "      <td>Fagales</td>\n",
+       "      <td>Fagaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TRY</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rhamnus glandulosa</th>\n",
+       "      <td>Rosales</td>\n",
+       "      <td>Rhamnaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TRY</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Senna timorensis</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>GRIN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Strophostyles helvola</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Umtiza listeriana</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TRY</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Xiphotheca elliptica</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Xiphotheca reflexa</th>\n",
+       "      <td>Fabales</td>\n",
+       "      <td>Fabaceae</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sprent2009</td>\n",
+       "      <td>Appendices</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          order       family Data_fixing      Source  \\\n",
+       "scientific_name                                                        \n",
+       "Acomastylis rossii      Rosales     Rosaceae          No         TRY   \n",
+       "Amphithalea parvifolia  Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Aspalathus subtingens   Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Betula davurica         Fagales   Betulaceae          No         TRY   \n",
+       "Cercis gigantea         Fabales     Fabaceae          No        GRIN   \n",
+       "Cercocarpus betuloides  Rosales     Rosaceae         Yes      Manual   \n",
+       "Cullen cinereum         Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Cullen leucanthum       Fabales     Fabaceae         Yes        GRIN   \n",
+       "Cullen parvum           Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Cullen patens           Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Cullen pustulatum       Fabales     Fabaceae         Yes        GRIN   \n",
+       "Cullen tenax            Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Cyathostegia mathewsii  Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Cyclopia longifolia     Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Dalbergiella nyasae     Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Lachemilla orbiculata   Rosales     Rosaceae          No         TRY   \n",
+       "Lespedeza cuneata       Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Lespedeza nipponica     Fabales     Fabaceae         Yes        GRIN   \n",
+       "Libidibia ferrea        Fabales     Fabaceae          No        GRIN   \n",
+       "Medicago ciliaris       Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Medicago italica        Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Medicago shepardii      Fabales     Fabaceae         Yes        GRIN   \n",
+       "Ononis arvensis         Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Oxytropis borealis      Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Parasponia parviflora   Rosales  Cannabaceae         Yes        GRIN   \n",
+       "Parkinsonia florida     Fabales     Fabaceae          No        GRIN   \n",
+       "Podolobium alpestre     Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Quercus margarettiae    Fagales     Fagaceae          No         TRY   \n",
+       "Rhamnus glandulosa      Rosales   Rhamnaceae          No         TRY   \n",
+       "Senna timorensis        Fabales     Fabaceae          No        GRIN   \n",
+       "Strophostyles helvola   Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Umtiza listeriana       Fabales     Fabaceae          No         TRY   \n",
+       "Xiphotheca elliptica    Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "Xiphotheca reflexa      Fabales     Fabaceae         Yes  Sprent2009   \n",
+       "\n",
+       "                             Source2  \n",
+       "scientific_name                       \n",
+       "Acomastylis rossii            Wright  \n",
+       "Amphithalea parvifolia    Appendices  \n",
+       "Aspalathus subtingens     Appendices  \n",
+       "Betula davurica               Wright  \n",
+       "Cercis gigantea                 None  \n",
+       "Cercocarpus betuloides  Becking_1975  \n",
+       "Cullen cinereum           Appendices  \n",
+       "Cullen leucanthum               None  \n",
+       "Cullen parvum             Appendices  \n",
+       "Cullen patens             Appendices  \n",
+       "Cullen pustulatum               None  \n",
+       "Cullen tenax              Appendices  \n",
+       "Cyathostegia mathewsii    Appendices  \n",
+       "Cyclopia longifolia       Appendices  \n",
+       "Dalbergiella nyasae       Appendices  \n",
+       "Lachemilla orbiculata         Wright  \n",
+       "Lespedeza cuneata         Appendices  \n",
+       "Lespedeza nipponica             None  \n",
+       "Libidibia ferrea                None  \n",
+       "Medicago ciliaris         Appendices  \n",
+       "Medicago italica          Appendices  \n",
+       "Medicago shepardii              None  \n",
+       "Ononis arvensis           Appendices  \n",
+       "Oxytropis borealis        Appendices  \n",
+       "Parasponia parviflora           None  \n",
+       "Parkinsonia florida             None  \n",
+       "Podolobium alpestre       Appendices  \n",
+       "Quercus margarettiae          Wright  \n",
+       "Rhamnus glandulosa            Wright  \n",
+       "Senna timorensis                None  \n",
+       "Strophostyles helvola     Appendices  \n",
+       "Umtiza listeriana             Wright  \n",
+       "Xiphotheca elliptica      Appendices  \n",
+       "Xiphotheca reflexa        Appendices  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "werner.loc[update_it, 'scientific_name'] = \\\n",
+    "    werner.loc[update_it, 'scientific_name'].apply(lambda x: synonyms[x])\n",
+    "\n",
+    "found = werner.scientific_name.isin(sci_names)\n",
+    "print(found.sum())\n",
+    "\n",
+    "missing = werner[~found]\n",
+    "print(missing.shape)\n",
+    "missing = missing.set_index('scientific_name', verify_integrity=True)\n",
+    "missing = missing.sort_index()\n",
+    "missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
