Upgrading sample selection report WIP

--- a/notebooks/audit_data.ipynb
+++ b/notebooks/audit_data.ipynb
@@ -301,6 +301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verify the image counts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -360,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Can we find the extra image record"
+    "## Find any extra image records"
    ]
   },
   {
